--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "firebase": "^3.6.5",
     "firebase-admin": "^4.0.4",
     "request": "^2.75.0",
-    "request-promise": "^4.1.1",
-    "unsplash-js": "^4.4.0"
+    "request-promise": "^4.1.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thommorais/bot.git"
+    "url": "https://github.com/thommorais/bot-fuerza.git"
   },
   "keywords": [
     "node",
