--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bot",
+  "name": "bot fuerza",
   "version": "0.0.1",
-  "description": "a bot",
+  "description": "a bot for fuerza",
   "engines": {
     "node": "5.9.1"
   },
