--- a/package.json
+++ b/package.json
@@ -25,8 +25,5 @@
     "node",
     "express"
   ],
-  "license": "MIT",
-  "devDependencies": {
-    "nodemon": "^1.11.0"
-  }
+  "license": "MIT"
 }
