--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^3.6.5",
     "firebase-admin": "^4.0.4",
     "request": "^2.75.0",
+    "ejs": "^1.0.0",
     "request-promise": "^4.1.1"
   },
   "repository": {
